Aggiornato pom.xml per supportare JavaFX 21.0.2 e modificato run-mac.sh per compatibilità